// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <ProfileImage
    alt="A profile image"
    fit="cover"
    height="75"
    src="profile.jpg"
    variant="default"
    width="75"
  >
    <Image
      alt="A profile image"
      className="profile-image orion-fusion-theme"
      fit="cover"
      height="75"
      isFluid={false}
      placeholder={
        <span
          alt="A profile image"
          aria-label="A profile image"
          className={
            Array [
              "profile-image placeholder cover default orion-fusion-theme",
            ]
          }
          fit="cover"
          height="75"
          role="img"
          src="profile.jpg"
          style={
            Object {
              "height": "75px",
              "width": "75px",
            }
          }
          variant="default"
          width="75"
        />
      }
      src="profile.jpg"
      variant="default"
      width="75"
    >
      <img
        alt="A profile image"
        className="image cover default orion-fusion-theme hidden profile-image orion-fusion-theme"
        height="75"
        onError={[Function]}
        onLoad={[Function]}
        src="profile.jpg"
        width="75"
      />
      <span
        alt="A profile image"
        aria-label="A profile image"
        className={
          Array [
            "profile-image placeholder cover default orion-fusion-theme",
          ]
        }
        fit="cover"
        height="75"
        role="img"
        src="profile.jpg"
        style={
          Object {
            "height": "75px",
            "width": "75px",
          }
        }
        variant="default"
        width="75"
      />
    </Image>
  </ProfileImage>
</ThemeContextProvider>
`;

exports[`should render a Terra image with a placeholder prop 1`] = `
<Image
  alt="A profile image"
  className="profile-image"
  fit="cover"
  height="75"
  isFluid={false}
  placeholder={
    <span
      alt="A profile image"
      aria-label="A profile image"
      className={
        Array [
          "profile-image placeholder cover default",
        ]
      }
      fit="cover"
      height="75"
      role="img"
      src="profile.jpg"
      style={
        Object {
          "height": "75px",
          "width": "75px",
        }
      }
      variant="default"
      width="75"
    />
  }
  src="profile.jpg"
  variant="default"
  width="75"
/>
`;

exports[`should render a profile image with fit style as contain 1`] = `
<Image
  alt="A profile image"
  className="profile-image"
  fit="contain"
  height="75"
  isFluid={false}
  placeholder={
    <span
      alt="A profile image"
      aria-label="A profile image"
      className={
        Array [
          "profile-image placeholder contain default",
        ]
      }
      fit="contain"
      height="75"
      role="img"
      src="profile.jpg"
      style={
        Object {
          "height": "75px",
          "width": "75px",
        }
      }
      variant="default"
      width="75"
    />
  }
  src="profile.jpg"
  variant="default"
  width="75"
/>
`;

exports[`should render an avatar image without Source prop 1`] = `
<span
  alt="Default"
  aria-label="Default"
  className={
    Array [
      "profile-image placeholder cover default",
    ]
  }
  fit="cover"
  height="75"
  role="img"
  style={
    Object {
      "height": "75px",
      "width": "75px",
    }
  }
  variant="default"
  width="75"
/>
`;
